# avocado_analytics

./: README.md  app.py  pyproject.toml
assets/: style.css
