[tool.poetry]
name = "avocado-analytics"
version = "0.1.0"
description = ""
authors = ["Aleksey <kaloha215@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "2.8.1"
pandas = "1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
